--- a/index.html
+++ b/index.html
@@ -1,28 +1,36 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>My To Do List</title>
+    <title>To Do List</title>
   </head>
   <body>
     <div class="todo-wrapper">
-      <h2>My To Do List</h2>
+      <h2>My to-do list</h2>
       <p>Double-click an item to mark it complete.</p>
 
       <form name="todo-adder">
-        <input type="text" name="" id="todo-entry-box" />
+        <input type="text" id="todo-entry-box" />
       </form>
-      <button class="pretty-button" id="add-button">Add</button>
-
+      <button id="add-button" class="pretty-button">Add</button>
       <br />
-
       <ol id="todo-list"></ol>
       <div id="control-wrapper">
-        <button id="clear-button" class="pretty-button">Clear Completed</button>
-        <button id="empty-button" class="pretty-button">Empty List</button>
-        <button id="save-button" class="pretty-button">Save List</button>
+        <button
+          id="clear-completed-button"
+          onclick="clearCompletedToDoItems()"
+          class="pretty-button"
+        >
+          Clear Completed
+        </button>
+        <button id="empty-button" onclick="emptyList()" class="pretty-button">
+          Empty List
+        </button>
+        <button id="save-button" onclick="saveList()" class="pretty-button">
+          Save List
+        </button>
       </div>
     </div>
 
